@@ -1,0 +1,2 @@
+CONFIG_PROTECT="/boot/config.txt /boot/cmdline.txt"
+
